# uls

./: .gitignore  CHANGES  INSTALL  LICENSE  MANIFEST  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac  uls.config
doc/: Makefile.am  Makefile.in  ulc2class_man.txt  ulf_gen_man.txt  uls_stream_man.txt
doc/man/: Makefile.am  Makefile.in  ulc2class.1  ulf_gen.1  uls_stream.1
examples/Css3/: Css3Lex.cpp  Css3Lex.h  Css3LexBasis.h  Css3Toks.cpp  Makefile.am  Makefile.in  css3.ulc  css3_out.txt  css3_sam.txt
examples/DumpToks/: DumpToks.cpp  DumpToksBasis.h  Makefile.am  Makefile.in  dumptoks.ulc  dumptoks_out.txt
examples/Html5/: Html5Lex.cpp  Html5Lex.h  Html5LexBasis.h  Html5Toks.cpp  Makefile.am  Makefile.in  html5.ulc  html5_out.txt  html5_sam.txt
examples/Mkf/: Makefile.am  Makefile.in  MkfLex.cpp  MkfLex.h  MkfLexBasis.h  MkfToks.cpp  mkf.ulc  mkf_out.txt  mkf_sam.txt
examples/Natural/: EngLex.cpp  EngLex.h  EngLexBasis.h  EngToks.cpp  Makefile.am  Makefile.in  eng.ulc  natural_out.txt
examples/Shell/: Makefile.am  Makefile.in  ShellLex.cpp  ShellLex.h  ShellLexBasis.h  ShellToks.cpp  shell.ulc  shell_out.txt  shell_sam.txt
examples/tokseq/: Makefile.am  Makefile.in  main.c  tokseq.uld  tokseq_lex.c  tokseq_lex.h  tokseq_out.txt  tokseq_sam.txt
examples/ulc2yaml/: Makefile.am  sample.uld  sample1.ulc  sample2.ulc  ulc2yaml.c
examples/yacc/: Makefile.am  Makefile.in  globals.h  main.c  sample.ulc  ulc.ulc  ulc2xml.c  ulc2xml.h  ulc_gram.c  ulc_gram.h  ulc_gram.y  ulc_lex.h  yacc_out.txt  yacc_sam.txt
post_inst/: Makefile.am  Makefile.in  gen_uninst_info.sh  list_uls_examples.txt  make_uls_examples_tar.sh  notice.sh  setup_uls_examples.sh  strip_libs.sh  uls_examples.tar  uninstall_uls.sh
src/: Makefile.am  Makefile.in  array_names00.txt  csz_stream.c  fdfilter.c  gen_array_names00.sh  idkeyw.c  litesc.c  litstr.c  onechar.c  twoplus.c  uld_conf.c  uls.h  uls_auw.c  uls_conf.c  uls_context.c  uls_core.c  uls_dump.c  uls_emit.c  uls_fileio.c  uls_freq.c  uls_ieee754.c  uls_init.c  uls_input.c  uls_istream.c  uls_langs.c  uls_lex.c  uls_lf_percent_f.c  uls_lf_sprintf.c  uls_lf_xputs.c  uls_log.c  uls_misc.c  uls_num.c  uls_ostream.c  uls_prim.c  uls_print.c  uls_stream.c  uls_sysprops.c  uls_tokdef.c  uls_util.c  (+4 more)
src/uls/: csz_stream.h  fdfilter.h  idkeyw.h  ieee754.h  litesc.h  litstr.h  onechar.h  twoplus.h  uld_conf.h  uls_auw.h  uls_conf.h  uls_config.h  uls_const.h  uls_const_linux.h  uls_context.h  uls_core.h  uls_dump.h  uls_emit.h  uls_fileio.h  uls_freq.h  uls_init.h  uls_input.h  uls_istream.h  uls_langs.h  uls_lex.h  uls_lf_percent_f.h  uls_lf_sprintf.h  uls_lf_xputs.h  uls_log.h  uls_misc.h  uls_num.h  uls_ostream.h  uls_prim.h  uls_print.h  uls_stream.h  uls_sysprops.h  uls_tokdef.h  uls_type.h  uls_util.h  uls_version.h  (+3 more)
tests/cpp_hello/: Makefile.am  Makefile.in  cpp_hello.cpp  dumptoks.ulc  in_1_1.txt  in_2_1.txt  in_4_1.txt  out_0_0.txt  out_1_1.txt  out_2_0.txt  out_2_1.txt  out_3_1.txt  out_4_1.txt  sample1.ulc  sample2.uld
tests/dump_strs/: Makefile.am  Makefile.in  in_0_1.txt  in_0_2.txt  in_0_3.txt  in_1_1.txt  out_0_2.txt  out_0_3.txt  out_1_1.txt  out_2_1.txt  out_3_1.txt  sample.ulc  strings.c
tests/dump_toks/: Makefile.am  Makefile.in  dump_toks.c  in_0_1.txt  in_0_2.txt  in_0_3.txt  in_0_4.txt  in_1_1.txt  in_1_2.txt  in_2_1.txt  in_3_1.txt  out_0_1.txt  out_0_2.txt  out_0_3.txt  out_0_4.txt  out_0_5.txt  out_1_1.txt  out_1_2.txt  out_2_1.txt  out_3_1.txt  outw_3_1.txt  sample.ulc  sample.ulf
tests/file_enc/: Makefile.am  file_enc.c  in_0_1.txt  in_2_1.txt  out_0_1.txt  out_1_1.txt  out_2_1.txt  sample.ulc
tests/gcc_toks/: Makefile.am  Makefile.in  gcc.ulc  gcc_lex.c  gcc_lex.h  gcc_toks.c  in_0_1.txt  in_0_2.txt  in_2_1.txt  out_0_1.txt  out_1_1.txt  out_2_1.txt
tests/getch/: Makefile.am  Makefile.in  getch.c  in_0_1.txt  in_1_1.txt  out_0_1.txt  out_1_1.txt  out_2_1.txt  sample.ulc
tests/id_stat/: Makefile.am  Makefile.in  id_stat.c  in_0_1.txt  in_1_1.txt  out_0_1.txt  out_1_1.txt  out_2_0.txt  sample.ulc
tests/lex_input/: Makefile.am  in_0_1.txt  in_3_1.txt  lex_input  main.c  out_0_1.txt  out_2_1.txt  out_3_1.txt  sample_g.ulc
tests/line/: Makefile.am  Makefile.in  in_0_1.txt  line.c  out_0_1.txt  out_1_1.txt  out_2_1.txt  out_3_1.txt  out_4_1.txt  sample.ulc
tests/log/: Makefile.am  Makefile.in  err_0_1.txt  err_1_1.txt  err_3_1.txt  logging.c  out_0_1.txt  out_1_1.txt  sample.ulc
tests/many_kwrds/: Makefile.am  Makefile.in  in_0_1.txt  many_kwrds.c  out_0_1.txt  sample.ulc  sample.ulf
tests/nest/: Makefile.am  Makefile.in  in_0_1.txt  input1_1.txt  nest.c  out_0_1.txt  sample.ulc
ulc_exam/: Makefile.am  Makefile.in  Matlab.ulc  actionscript.ulc  ansi_c.ulc  c99.ulc  cpp.ulc  csharp.ulc  gcc.ulc  go.ulc  java.ulc  javascript.ulc  lua.ulc  objective_c.ulc  php.ulc  proc_ulc_files.sh  python.ulc  simple.ulc  simplest.ulc  sql.ulc  tcl.ulc  ulc_genlst.txt  visual_basic.ulc
ulscompat/: Makefile.am  Makefile.in  ms_mbcs_file.c  uls_alex.c  uls_alog.c  uls_aprint.c  uls_conf_astr.c  uls_conf_wstr.c  uls_emit_astr.c  uls_emit_wstr.c  uls_fileio_astr.c  uls_fileio_wstr.c  uls_istream_astr.c  uls_istream_wstr.c  uls_lf_saprintf.c  uls_lf_swprintf.c  uls_ostream_astr.c  uls_ostream_wstr.c  uls_tokdef_astr.c  uls_tokdef_wstr.c  uls_util_astr.c  uls_util_wstr.c  uls_wlex.c  uls_wlog.c  uls_wprint.c  ulscompat.c
ulscompat/uls/: ms_mbcs_file.h  uls_alex.h  uls_alog.h  uls_aprint.h  uls_conf_astr.h  uls_conf_wstr.h  uls_emit_astr.h  uls_emit_wstr.h  uls_fileio_astr.h  uls_fileio_wstr.h  uls_istream_astr.h  uls_istream_wstr.h  uls_lf_saprintf.h  uls_lf_swprintf.h  uls_ostream_astr.h  uls_ostream_wstr.h  uls_tokdef_astr.h  uls_tokdef_wstr.h  uls_util_astr.h  uls_util_wstr.h  uls_wlex.h  uls_wlog.h  uls_wprint.h  ulscompat.h
ulsconfig/: Makefile.am  Makefile.in  check_arch.sh  gen_sysprops.sh  uls_common.sh  uls_id_ranges.txt  uls_langs.txt
ulscpp/: Makefile.am  Makefile.in  UlsAuw.cpp  UlsIStream.cpp  UlsLex.cpp  UlsOStream.cpp  UlsStream.cpp  UlsUtils.cpp
ulscpp/uls/: UlsAuw.h  (+7 more)
(+149 files in other folders)
